--- a/style.css
+++ b/style.css
@@ -16,15 +16,31 @@ p {
 .grid-container {
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 30% 10% 20% 20% 20%;
   gap: 0px 0px;
   grid-template-areas:
+    "FlourishChart FlourishChart IntroText IntroText"
+    "SearchboxDesc SearchboxDesc SearchboxDesc ."
     "Map Map Map RaceDemographics"
     "Map Map Map MajorDist"
     "SocialMobility StickerPrice ParentsIncome Captions";
   margin-left: auto;
   margin-right: auto;
 }
+
+.flourish-chart {
+  grid-area: FlourishChart;
+  /* max-width: 400px; */
+}
+
+.IntroText {
+  grid-area: IntroText;
+  font-size: 1.2vw;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.SearchboxDesc { grid-area: SearchboxDesc; }
 
 .Map { grid-area: Map; }
 
@@ -72,11 +88,11 @@ svg {
 .RaceDemographics {
   display: flex;
   align-items: center;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .MajorDist {
   display: flex;
   align-items: center;
-  height: 100%;
+  /* height: 100%; */
 }
